--- a/High-Five/style/css.css
+++ b/High-Five/style/css.css
@@ -2,6 +2,7 @@ html{
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	background-image: url("../image/backmap.jpg");
 }
 body {
 	background-color: #f6f6e6;
