--- a/High-Five/style/css.css
+++ b/High-Five/style/css.css
@@ -1,12 +1,14 @@
 html{
 	height: 100%;
 	padding: 0;
-	margin: 0;
-	background-image: url("../image/backmap.jpg");
+	margin: 0;	
 }
 body {
+	background-image: url("../image/backmap.jpg");
 	background-color: #f6f6e6;
 	position: relative;
+	background-size: 100% 100%;
+	
 }
 #wrapper {
 	width: 900px;
